# JasCueVideoLab

./: .gitignore  FULL-VERSION-PLAN.md  MACOS-SAM21-EVALUATION.md  METHODOLOGY.md  README.md  pyproject.toml
examples/: evidence-query-lock-v2.json  evidence-query-lock.json
fixtures/: manifest.json
prompts/: content_map_zh-TW.txt  dense_event_frame_selection_zh-TW.txt  direct_moments_mmss_zh-TW.txt  direct_video_grounding_native_yxyx_zh-TW.txt  feature_cut_selects_zh-TW.txt  full_clip_card_mmss_zh-TW.txt  grounding_native_yxyx_zh-TW.txt  grounding_zh-TW.txt  indexed_storyboard_zh-TW.txt  music_semantic_pairing_zh-TW.txt  query_predicate_frame_selection_zh-TW.txt  rushes_selects_zh-TW.txt  target_candidates_mmss_zh-TW.txt  target_moments_mmss_zh-TW.txt  temporal_map_zh-TW.txt  trim_intent_frame_selection_zh-TW.txt  trim_intent_video_mmss_zh-TW.txt
scripts/: __init__.py  apply_open_edit_candidate_overrides.py  apply_reframe_policy.py  build_vertical_crop_audit.py  plan_clip_card_feature_cut.py  plan_clip_card_open_edit.py  plan_selected_clip_cards.py  prepare_efficienttam_fixture_frames.py  reconcile_open_edit_budget.py  render_clip_card_narrative.py  render_music_cue_preview.py  resequence_segments.py  reuse_open_edit_budget.py  run_efficienttam_generalization_eval.py  run_feature_trim_proposals.py  shortlist_clip_card_feature_candidates.py  verify_clip_card_text.py  verify_feature_cut.py
tests/: conftest.py  test_ab_review.py  test_apply_open_edit_candidate_overrides.py  test_apply_reframe_policy.py  test_auto_reframe.py  test_billing.py  test_blind_review.py  (+27 more)
(+47 files in other folders)
