[project]
name = "jascue-video-lab"
version = "0.1.0"
description = "Isolated Gemini 3.5 Flash video understanding and single-frame grounding experiment"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "google-genai>=2.3.0,<3",
  "pillow>=11.3.0,<12",
  "pydantic>=2.11.0,<3",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0,<9",
]

[project.scripts]
jascue-video-lab = "jascue_video_lab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jascue_video_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

