[project]
name = "jascue-video-lab"
version = "0.1.0"
description = "Isolated Gemini 3.5 Flash video understanding and single-frame grounding experiment"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.116.0,<1",
  "google-genai>=2.3.0,<3",
  "pillow>=11.3.0,<12",
  "pydantic>=2.11.0,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn>=0.35.0,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0,<9",
]

[project.scripts]
jascue-video-lab = "jascue_video_lab.cli:main"

[project.optional-dependencies]
tracking = [
    "opencv-contrib-python-headless>=5.0.0.93",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jascue_video_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
